@@ -5,8 +5,6 @@ import static org.junit.jupiter.api.Assertions.*;
 import java.io.IOException;
 import java.io.StringReader;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
 
@@ -19,7 +17,7 @@ class CsvParserTest {
 
     @Test
     void test() throws Exception {
-        final List<CsvToken> tokens = new ArrayList<>();
+        final var tokens = new ArrayList<CsvToken>();
 
         tokens.add(CsvToken.field("foo"));
         tokens.add(CsvToken.SEPARATOR);
@@ -41,24 +39,24 @@ class CsvParserTest {
 
         tokens.add(CsvToken.EOF);
 
-        final Iterator<CsvToken> it = tokens.iterator();
-        final CsvLexer lexer = new CsvLexer(new StringReader("dummy")) {
+        final var it = tokens.iterator();
+        final var lexer = new CsvLexer(new StringReader("dummy")) {
             @Override
             public CsvToken next() throws IOException {
                 return it.hasNext() ? it.next() : CsvToken.EOF;
             }
         };
 
-        final CsvParser parser = new CsvParser(lexer);
-        assertEquals(Optional.of(Arrays.asList("foo", "bar", "baz")), parser.next());
-        assertEquals(Optional.of(Arrays.asList("", "", "")), parser.next());
-        assertEquals(Optional.of(Arrays.asList("", "", "")), parser.next());
+        final var parser = new CsvParser(lexer);
+        assertEquals(Optional.of(List.of("foo", "bar", "baz")), parser.next());
+        assertEquals(Optional.of(List.of("", "", "")), parser.next());
+        assertEquals(Optional.of(List.of("", "", "")), parser.next());
         assertEquals(Optional.empty(), parser.next());
     }
 
     @Test
     void test_line() throws Exception {
-        final List<CsvToken> tokens = new ArrayList<>();
+        final var tokens = new ArrayList<CsvToken>();
 
         tokens.add(CsvToken.field("foo"));
         tokens.add(CsvToken.SEPARATOR);
@@ -67,43 +65,43 @@ class CsvParserTest {
         tokens.add(CsvToken.field("baz"));
         tokens.add(CsvToken.EOF);
 
-        final Iterator<CsvToken> it = tokens.iterator();
-        final CsvLexer lexer = new CsvLexer(new StringReader("dummy")) {
+        final var it = tokens.iterator();
+        final var lexer = new CsvLexer(new StringReader("dummy")) {
             @Override
             public CsvToken next() throws IOException {
                 return it.hasNext() ? it.next() : CsvToken.EOF;
             }
         };
 
-        final CsvParser parser = new CsvParser(lexer);
-        assertEquals(Optional.of(Arrays.asList("foo", "bar", "baz")), parser.next());
+        final var parser = new CsvParser(lexer);
+        assertEquals(Optional.of(List.of("foo", "bar", "baz")), parser.next());
         assertEquals(Optional.empty(), parser.next());
     }
 
     @Test
     void test_comma_only() throws Exception {
-        final List<CsvToken> tokens = new ArrayList<>();
+        final var tokens = new ArrayList<CsvToken>();
 
         tokens.add(CsvToken.SEPARATOR);
         tokens.add(CsvToken.SEPARATOR);
         tokens.add(CsvToken.EOF);
 
-        final Iterator<CsvToken> it = tokens.iterator();
-        final CsvLexer lexer = new CsvLexer(new StringReader("dummy")) {
+        final var it = tokens.iterator();
+        final var lexer = new CsvLexer(new StringReader("dummy")) {
             @Override
             public CsvToken next() throws IOException {
                 return it.hasNext() ? it.next() : CsvToken.EOF;
             }
         };
 
-        final CsvParser parser = new CsvParser(lexer);
-        assertEquals(Optional.of(Arrays.asList("", "", "")), parser.next());
+        final var parser = new CsvParser(lexer);
+        assertEquals(Optional.of(List.of("", "", "")), parser.next());
         assertEquals(Optional.empty(), parser.next());
     }
 
     @Test
     void test_field_and_comma_repeate() throws Exception {
-        final List<CsvToken> tokens = new ArrayList<>();
+        final var tokens = new ArrayList<CsvToken>();
 
         tokens.add(CsvToken.field("foo"));
         tokens.add(CsvToken.SEPARATOR);
@@ -115,22 +113,22 @@ class CsvParserTest {
         tokens.add(CsvToken.LINE_BREAK);
         tokens.add(CsvToken.EOF);
 
-        final Iterator<CsvToken> it = tokens.iterator();
-        final CsvLexer lexer = new CsvLexer(new StringReader("dummy")) {
+        final var it = tokens.iterator();
+        final var lexer = new CsvLexer(new StringReader("dummy")) {
             @Override
             public CsvToken next() throws IOException {
                 return it.hasNext() ? it.next() : CsvToken.EOF;
             }
         };
 
-        final CsvParser parser = new CsvParser(lexer);
-        assertEquals(Optional.of(Arrays.asList("foo", "", "bar", "", "baz")), parser.next());
+        final var parser = new CsvParser(lexer);
+        assertEquals(Optional.of(List.of("foo", "", "bar", "", "baz")), parser.next());
         assertEquals(Optional.empty(), parser.next());
     }
 
     @Test
     void test_field_and_comma_repeate_2() throws Exception {
-        final List<CsvToken> tokens = new ArrayList<>();
+        final var tokens = new ArrayList<CsvToken>();
 
         tokens.add(CsvToken.SEPARATOR);
         tokens.add(CsvToken.field("foo"));
@@ -143,17 +141,16 @@ class CsvParserTest {
         tokens.add(CsvToken.SEPARATOR);
         tokens.add(CsvToken.EOF);
 
-        final Iterator<CsvToken> it = tokens.iterator();
-        final CsvLexer lexer = new CsvLexer(new StringReader("dummy")) {
+        final var it = tokens.iterator();
+        final var lexer = new CsvLexer(new StringReader("dummy")) {
             @Override
             public CsvToken next() throws IOException {
                 return it.hasNext() ? it.next() : CsvToken.EOF;
             }
         };
 
-        final CsvParser parser = new CsvParser(lexer);
-        assertEquals(Optional.of(Arrays.asList("", "foo", "", "bar", "", "baz", "")),
-                parser.next());
+        final var parser = new CsvParser(lexer);
+        assertEquals(Optional.of(List.of("", "foo", "", "bar", "", "baz", "")), parser.next());
         assertEquals(Optional.empty(), parser.next());
     }
 }
